Added several accessory things, some minor code changes

--- a/Cameras/Dirt Rally 2.0/InjectableGenericCameraSystem/InjectableGenericCameraSystem.vcxproj
+++ b/Cameras/Dirt Rally 2.0/InjectableGenericCameraSystem/InjectableGenericCameraSystem.vcxproj
@@ -160,7 +160,7 @@
     <IntDir>$(SolutionDir)intermediate\$(ProjectName)\$(Platform)\$(Configuration)\</IntDir>
     <LibraryPath>$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64);$(NETFXKitsDir)Lib\um\x64</LibraryPath>
     <IncludePath>$(SolutionDir)InjectableGenericCameraSystem\Overlay;$(VC_IncludePath);$(WindowsSDK_IncludePath)</IncludePath>
-    <PostBuildEventUseInBuild>false</PostBuildEventUseInBuild>
+    <PostBuildEventUseInBuild>true</PostBuildEventUseInBuild>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='ReleaseDX12|x64'">
     <LinkIncremental>false</LinkIncremental>
@@ -297,8 +297,8 @@
       <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
-      <Command>
-      </Command>
+      <Command>copy /Y "$(ProjectDir)..\..\..\Accessories\DR2Tools.cfg" "$(OutDir)\"</Command>
+      <Message>Post-Stuff</Message>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='ReleaseDX12|x64'">
